Added more info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top">
     <div class="nav">
-      <svg width="157" height="33" xmlns="http://www.w3.org/2000/svg">
+      <svg class="logo" width="157" height="33" xmlns="http://www.w3.org/2000/svg">
         <g fill="#FFF" fill-rule="nonzero">
           <path d="M46.848 7.528c7.266 0 11.431 5.828 11.431 12.24 0 7.267-4.165 13.045-11.967 13.045-7.266 0-11.438-5.778-11.438-12.191 0-7.266 4.172-13.094 11.974-13.094zm-.536 5.38c-3.456 0-5.205 2.87-5.205 6.848 0 4.801 1.75 7.665 5.74 7.665 3.5 0 5.2-2.864 5.2-6.812 0-4.831-1.794-7.702-5.735-7.702zM145.156 22.77h-3.94c.447 3.05 3.224 4.981 6.767 4.981 2.49 0 5.467-.492 7.397-2.291h.255v1.868c0 3.113-2.104 5.467-8.717 5.467a11.924 11.924 0 0 1-11.88-12.148c0-8.095 4.932-13.138 11.83-13.138 5.02 0 9.683 3.586 9.683 9.34-.05 4.489-3.406 5.921-11.395 5.921zm1.121-10.218c-2.914 0-4.931 2.373-5.062 5.156l-.05.803h2.696c5.691 0 6.993-.623 6.993-2.329 0-2.422-1.794-3.63-4.558-3.63h-.019zM22.552 7.528c7.26 0 11.432 5.828 11.432 12.24 0 7.267-4.172 13.045-11.974 13.045-7.26 0-11.431-5.778-11.431-12.191-.019-7.266 4.171-13.094 11.973-13.094zm-.542 5.38c-3.45 0-5.199 2.87-5.199 6.848 0 4.801 1.75 7.665 5.741 7.665 3.493 0 5.2-2.864 5.2-6.812 0-4.831-1.794-7.702-5.742-7.702z"
           />
@@ -21,8 +21,7 @@
         </g>
       </svg>
       <div class="contact-us">
-        For a demo, support pricing or to purchase:
-        <a class="contact-us-btn" href="mailto:sales@loomble.com">Contact Us</a>
+        <a class="contact-us-btn" href="/contact#managed-hosting">Purchase Managed Loomble Hosting</a>
       </div>
     </div>
     <div class="container">
@@ -30,15 +29,16 @@
         <h1 class="tagline">Everything you need to develop apps and manage your business.</h1>
         <p class="about">Loomble is an open source and extendable cross-platform application development software framework, featuring an
           automatically-generated administrative hub for managing any data related to your business or apps.</div>
-      <div class="row feature-highlights">
+      <div class="row features">
         <div class="col feature">
           <i class="fab fa-osi feature-icon"></i>
           <h3 class="feature-heading">Open Source</h3>
-          <p class="feature-desc">MIT License. Host on your own webserver or buy a no-contract hosting plan directly from us.</p>
+          <p class="feature-desc">
+            <a href="/license">MIT Licensed</a>. Host on your own webserver or
+            <a href="/contact#managed-hosting">buy a no-contract hosting plan directly from us</a>.</p>
         </div>
         <div class="col feature">
           <i class="fas fa-plug feature-icon"></i>
-          <i class="fas fa-shopping-cart feature-icon"></i>
           <h3 class="feature-heading">Plugin Ecosystem</h3>
           <p class="feature-desc">ERP, eCommerce, CMS, and more are just a simple installation with easy customization.</p>
         </div>
@@ -68,7 +68,7 @@
             worry about scalability.
             <p class="service-cta">
               <i class="fas fa-chevron-circle-right service-cta-icon"></i>
-              <a class="service-cta-link" href="mailto:sales@loomble.com">Get Loomble Managed Hosting</a>
+              <a class="service-cta-link" href="/contact#managed-hosting">Purchase Managed Loomble Hosting</a>
             </p>
           </p>
         </div>
@@ -79,16 +79,70 @@
             directly with the engineers behind Loomble.
             <p class="service-cta">
               <i class="fas fa-chevron-circle-right service-cta-icon"></i>
-              <a class="service-cta-link" href="mailto:sales@loomble.com">Get Paid Support</a>
+              <a class="service-cta-link" href="/contact#paid-support">Purchase Paid Support</a>
             </p>
           </p>
         </div>
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="features--more--container">
+      <h2 class="features--more--heading">Extended Features</h2>
+      <div class="row features features--more">
+        <div class="col feature">
+          <i class="fas fa-shopping-cart feature-icon"></i>
+          <h3 class="feature-heading">Commerce</h3>
+          <p class="feature-desc">eCommerce, Business-to-business (B2B), business-to-consumer (B2C), marketing, inventory, and sales.</p>
+        </div>
+        <div class="col feature">
+          <i class="fas fa-users feature-icon"></i>
+          <i class="fas fa-briefcase feature-icon"></i>
+          <h3 class="feature-heading">Sales Force Automation</h3>
+          <p class="feature-desc">Manage customer relationships &amp; opportunities, run reports, see projections and more.</p>
+        </div>
+        <div class="col feature">
+          <i class="far fa-money-bill-alt feature-icon"></i>
+          <h3 class="feature-heading">Accounting</h3>
+          <p class="feature-desc">Payroll, on-line bill paying, employee time + billing + expense reporting, financial management and purchasing.</p>
+        </div>
+
+      </div>
+      <div class="row features features--more">
+        <div class="col feature">
+          <i class="fas fa-building feature-icon"></i>
+          <h3 class="feature-heading">Business Management</h3>
+          <p class="feature-desc">
+            Productivity, human resources, project management, and information technology infrastructure tools.</p>
+        </div>
+
+        <div class="col feature">
+          <i class="far fa-file-alt feature-icon"></i>
+          <i class="far fa-images feature-icon"></i>
+          <h3 class="feature-heading">Website Content Management</h3>
+          <p class="feature-desc">Manage static pages, articles, blog posts, images and videos for your websites or storefronts.</p>
+        </div>
+
+        <div class="col feature">
+          <i class="fas fa-question feature-icon"></i>
+          <h3 class="feature-heading">Customer Helpdesk</h3>
+          <p class="feature-desc">Centralized customer support hub and office and business productivity</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container cta">
+    <h3>To schedule a demo, inquire about support plans, or to purchase managed hosting:</h3>
+    <a class="contact-us-btn" href="/contact">Contact Us</a>
+  </div>
 
   <footer class="container footer">
     &copy; 2016&ndash;2018 Loomble
+    <p class="legal-links">
+      <a href="/privacy">Privacy</a>
+      <a href="/terms">Terms of Use</a>
+    </p>
   </footer>
 </body>
 
