Fixed helpdesk blurb

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col feature">
           <i class="fas fa-question feature-icon"></i>
           <h3 class="feature-heading">Customer Helpdesk</h3>
-          <p class="feature-desc">Centralized customer support hub and office and business productivity</p>
+          <p class="feature-desc">Centralized customer support hub.</p>
         </div>
       </div>
     </div>
